--- a/src/components/creator/View.css
+++ b/src/components/creator/View.css
@@ -1,6 +1,12 @@
+:root {
+  --white: rgba(255, 255, 255, 0);
+  --black-foreground500: rgba(0, 0, 0, 0.5);
+  --transparent: transparent;
+}
+
 .resizer {
   background: #000;
-  opacity: .2;
+  opacity: 0.2;
   z-index: 1;
   box-sizing: border-box;
   background-clip: padding-box;
@@ -13,32 +19,34 @@
 .resizer:global(.horizontal) {
   height: 11px;
   margin: -5px 0;
-  border-top: 5px solid rgba(255, 255, 255, 0);
-  border-bottom: 5px solid rgba(255, 255, 255, 0);
+  border-top: 5px solid var(--white);
+  border-bottom: 5px solid var(--white);
   cursor: row-resize;
   width: 100%;
 }
 
 .resizer:global(.horizontal):hover {
-  border-top: 5px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
+  border-top: 5px solid var(--black-foreground500);
+  border-bottom: 5px solid var(--black-foreground500);
 }
 
 .resizer:global(.vertical) {
   width: 11px;
   margin: 0 -5px;
-  border-left: 5px solid rgba(255, 255, 255, 0);
-  border-right: 5px solid rgba(255, 255, 255, 0);
+  border-left: 5px solid var(--white);
+  border-right: 5px solid var(--white);
   cursor: col-resize;
 }
 
 .resizer:global(.vertical):hover {
-  border-left: 5px solid rgba(0, 0, 0, 0.5);
-  border-right: 5px solid rgba(0, 0, 0, 0.5);
+  border-left: 5px solid var(--black-foreground500);
+  border-right: 5px solid var(--black-foreground500);
 }
+
 .resizer:global(.disabled) {
   cursor: not-allowed;
 }
+
 .resizer:global(.disabled):hover {
-  border-color: transparent;
+  border-color: var(--transparent);
 }
