--- a/src/components/common/Panes.css
+++ b/src/components/common/Panes.css
@@ -1,8 +1,4 @@
-:root {
-  --white: rgba(255, 255, 255, 0);
-  --black-foreground500: rgba(0, 0, 0, 0.5);
-  --transparent: transparent;
-}
+@import '../../settings';
 
 .resizer {
   background: #000;
