--- a/src/components/preview/SlidePreview.css
+++ b/src/components/preview/SlidePreview.css
@@ -2,7 +2,7 @@
 
 .pages {
   background-color: var(--black-foreground800);
-  min-height: 100%;
+  min-height: calc(100% - 4 * var(--spacing));
   padding: calc(2 * var(--spacing));
 }
 
