Apply styles to outline

--- a/src/entries/index.css
+++ b/src/entries/index.css
@@ -1,1 +1,6 @@
 @import 'normalize.css';
+
+html {
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
+}
